--- a/Spin.Pillars/Spin.Pillars.csproj
+++ b/Spin.Pillars/Spin.Pillars.csproj
@@ -45,8 +45,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Spin.Pillars.v1\Spin.Pillars.v1.csproj" />
-    <ProjectReference Include="..\Supergene\Spin.Supergene\Spin.Supergene.csproj" />
+    <ProjectReference Include="..\..\..\Pillars\Spin.Pillars.v1\Spin.Pillars.v1.csproj" />
+    <ProjectReference Include="..\..\Supergene\Spin.Supergene\Spin.Supergene.csproj" />
   </ItemGroup>
 
   <ItemGroup>
