Updated relative references

--- a/Spin.Pillars.v1/Spin.Pillars.v1.csproj
+++ b/Spin.Pillars.v1/Spin.Pillars.v1.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Supergene\Spin.Supergene\Spin.Supergene.csproj" />
+    <ProjectReference Include="..\..\Supergene\Spin.Supergene\Spin.Supergene.csproj" />
   </ItemGroup>
 
 </Project>
