Assembly File System

--- a/Spin.Pillars/Spin.Pillars.csproj
+++ b/Spin.Pillars/Spin.Pillars.csproj
@@ -51,4 +51,10 @@
     <ProjectReference Include="..\..\Supergene\Spin.Supergene\Spin.Supergene.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FileSystem\Memory\" />
+    <Folder Include="FileSystem\Virtual\" />
+    <Folder Include="FileSystem\Zip\" />
+  </ItemGroup>
+
 </Project>
