--- a/Spin.Pillars/Spin.Pillars.csproj
+++ b/Spin.Pillars/Spin.Pillars.csproj
@@ -8,6 +8,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <LangVersion>latest</LangVersion>
+    <DefineConstants>TRACE;TESTS</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Web Debug|AnyCPU'">
@@ -44,9 +45,15 @@
     <Compile Remove="Logging\Data\State.cs" />
     <Compile Remove="Logging\LogController.cs" />
     <Compile Remove="Logging\Logs.cs" />
+    <Compile Remove="Logging\LogTemplate.cs" />
     <Compile Remove="Logging\LongCounter.cs" />
     <Compile Remove="Module.cs" />
     <Compile Remove="Runtime.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Logging\Writers\BinaryLogWriter.cs" />
+    <Compile Include="Logging\Writers\StreamingDictionaryWriter.cs" />
   </ItemGroup>
 
   <ItemGroup>
