--- a/Spin.Pillars/Spin.Pillars.csproj
+++ b/Spin.Pillars/Spin.Pillars.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
-    <Configurations>Debug;Release;Web Debug</Configurations>
+    <Configurations>Debug;Release;Web Debug;PerfTest</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
